--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/me
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
-  facebook:
+  email: 18817558610@163.com
   flickr:
   github: 
   instagram:
