--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 谢小华
 description: 超级无敌谢小华
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/me.png
+avatar: https://github.com/Groot-xie/Groot-xie.github.io/blob/master/images/me.jpg
 
 #
 # Flags below are optional
@@ -20,7 +20,7 @@ footer-links:
   dribbble:
   email: 18817558610@163.com
   flickr:
-  github: 
+  github: https://github.com/Groot-xie
   instagram:
   linkedin:
   pinterest:
