--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: 谢小华
 description: 超级无敌谢小华
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/Groot-xie/Groot-xie.github.io/blob/master/images/me.jpg
+avatar: https://avatars3.githubusercontent.com/u/44366321?s=60&v=4
 
 #
 # Flags below are optional
