--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: 谢小华
+name: 比如低头看云
 
 # Short bio or description (displayed in the header)
 description: Don't try or die
